# ck-mlx

./: .gitignore  Makefile  Package.resolved  Package.swift  README.md  main.py  pyproject.toml
Sources/CkMLXCLI/: CkMLX.swift
Sources/CkMLXCore/: Chunk.swift  Embed.swift  Indexer.swift  Search.swift  Store.swift  Walk.swift
Sources/CkMLXMCPServer/: MCPServer.swift  MCPTools.swift  main.swift
ck_mlx/: chunk.py  cli.py  cli_index.py  cli_query.py  embed.py  rerank.py  search.py  server.py  store.py  walk.py
docs/: swift-rewrite-progress.md
docs/plans/: 2026-06-21-ck-mlx-balanced-hardening.md  Claude_plan.md  Tests_MCP-and-Skill-fix_plan.md  dual-backend-mlx-plan.md  gemini_handoff-plan.md  swift-first-ck-mlx-rewrite-plan.md
tests/: test_chunk_tokenizer_local.py  test_cli_backend_option.py  test_cli_status_metadata.py  test_embed_metadata.py  test_embed_provider.py  test_integration_backends.py  test_local_embed_provider.py  test_local_reranker.py  test_rerank_provider.py  test_store_dynamic_dimensions.py
tests/CkMLXCoreTests/: CkMLXCoreTests.swift
